# FedWLA-for-IDS-in-IoT-IIoT-Environments

./: LICENSE  README.md
LGBM/: pyproject.toml
LGBM/lgbm_fedwla/: __init__.py  client.py  metrics.py  server.py  strategy.py  task.py
XGB/: pyproject.toml
XGB/xgb_fedwla/: __init__.py  server.py  strategy.py  task.py
XGB_EdgeIIoTset/: Readme
XGB_EdgeIIoTset/xgb_fedwla/: client.py
data/: README.md  Readme
