[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lgbm-fedwla"
version = "1.0.0"
description = "Federated Hyperparameter Optimisation (HPO) for LightGBM using FedWLA strategy"
license = "MIT"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "filelock"
]

[tool.flwr.app]
publisher = "minivipiu"

[tool.flwr.app.components]
serverapp = "lgbm_fedwla.server:app"
clientapp = "lgbm_fedwla.client:app"

[tool.flwr.app.config]
num-server-rounds = 10
dataset-path = "/home/minivipiu2/Escritorio/Federated_unsupervised/Datasets/EdgeIIoT/EdgeIIoT_cleaned.csv"
imbalance-factor = 5
num-partitions = 10
